Added footer with links to github repository and my portfolio website

--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
   <body>
     <h1>Welcome to Marbella!</h1>
     <h2>Beautiful city on the sunny southern coast of Spain</h2>
+    <footer>
+      <a
+        href="https://github.com/sapsu/travel-project-marbella"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Open-source code</a
+      >
+      by
+      <a
+        href="https://jovial-strudel-724475.netlify.app/"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Saana Ahonen</a
+      >
+    </footer>
   </body>
 </html>
