Created project header with css + background image

--- a/index.html
+++ b/index.html
@@ -6,24 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marbella travel</title>
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;0,700;0,800;1,200;1,400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Welcome to Marbella!</h1>
-    <h2>Beautiful city on the sunny southern coast of Spain</h2>
-    <footer>
-      <a
-        href="https://github.com/sapsu/travel-project-marbella"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Open-source code</a
-      >
-      by
-      <a
-        href="https://jovial-strudel-724475.netlify.app/"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Saana Ahonen</a
-      >
-    </footer>
+    <div class="container">
+      <div class="hero">
+        <h3>TRAVEL</h3>
+        <h1>Welcome to Marbella!</h1>
+        <h2>Beautiful city on the sunny southern coast of Spain</h2>
+        <a href="#more">Learn more</a>
+      </div>
+      <footer>
+        <a
+          href="https://github.com/sapsu/travel-project-marbella"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Open-source code</a
+        >
+        by
+        <a
+          href="https://jovial-strudel-724475.netlify.app/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Saana Ahonen</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
