Updated footer content and css

--- a/index.html
+++ b/index.html
@@ -16,25 +16,73 @@
   <body>
     <div class="container">
       <div class="hero">
-        <h3>TRAVEL</h3>
-        <h1>Welcome to Marbella!</h1>
+        <h3>DISCOVER</h3>
+        <h1>Marbella</h1>
         <h2>Beautiful city on the sunny southern coast of Spain</h2>
         <a href="#more">Learn more</a>
       </div>
+
       <footer>
-        <a
-          href="https://github.com/sapsu/travel-project-marbella"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Open-source code</a
-        >
-        by
-        <a
-          href="https://jovial-strudel-724475.netlify.app/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Saana Ahonen</a
-        >
+        <div class="footer-content">
+          <div>
+            <h4>More about Marbella</h4>
+            <ul>
+              <li>
+                <a
+                  href="https://www.airport-malaga.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Malaga airport</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://goo.gl/maps/CZf8Ux2axZz3hLxz8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Map of Marbella</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://marbella.avanzagrupo.com/en/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Public transport</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4>About me</h4>
+            <p>
+              Hi! My name is Saana and I've been living in Marbella for 1,5
+              years. I love the city and wanted to share it's highlights with
+              everyone.
+            </p>
+          </div>
+          <div>
+            <h4>About this website</h4>
+            <p>
+              This project was coded by
+              <a
+                href="https://jovial-strudel-724475.netlify.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Saana Ahonen</a
+              >
+              and it is
+
+              <a
+                href="https://github.com/sapsu/travel-project-marbella"
+                target="_blank"
+                rel="noopener noreferrer"
+                >open-sourced on GitHub</a
+              >
+              .
+            </p>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
