Added main section content (grid with text and image) + css

--- a/index.html
+++ b/index.html
@@ -16,14 +16,56 @@
   <body>
     <div class="container">
       <div class="hero">
-        <h3>DISCOVER</h3>
+        <h3>Welcome to</h3>
         <h1>Marbella</h1>
         <h2>Beautiful city on the sunny southern coast of Spain</h2>
         <a href="#more">Learn more</a>
       </div>
+      <main>
+        <section>
+          <div class="grid-2-columns">
+            <div>
+              <img
+                src="/src/images/old-town-street-small.JPG"
+                alt="Street in Marbella Old town"
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <h3>Discover</h3>
+              <h2>Marbella, the city of mountains, sun and sea</h2>
+
+              <p>
+                Marbella is a city and resort area on southern Spain’s Costa del
+                Sol, part of the Andalusia region. The Sierra Blanca Mountains
+                are the backdrop to 27 km of sandy Mediterranean beaches,
+                villas, hotels, and golf courses. West of Marbella town, the
+                Golden Mile of prestigious nightclubs and coastal estates leads
+                to Puerto Banús marina, filled with luxury yachts, and
+                surrounded by upmarket boutiques and bars.
+              </p>
+              <p>
+                Marbella is rich in culture and history that is lesser known to
+                the average tourist. Marbella was conquered by the Romans in
+                approximately 1600 BC. They named the city Salduba, which means
+                Salt City. Remains of the Roman era can still be found
+                throughout the city. Marbella was also ruled by Arabs for nearly
+                9 centuries. This is still evident today by the Moorish
+                architecture in various parts of the city. In 1485 Marbella was
+                conquered by the Spanish Catholic Monarchs led by King Fernando.
+                In the centuries to come, Marbella history as well as the town
+                went through dramatic changes. In a short span of only the last
+                about 50 years, Marbella has been transformed from a small
+                fishing and farming village into an international tourist
+                destination.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
 
       <footer>
-        <div class="footer-content">
+        <div class="grid-3-columns-uneven">
           <div>
             <h4>More about Marbella</h4>
             <ul>
