Added 3 cards with information and pictures of my favourite cafès

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
               />
             </div>
             <div>
-              <h3>Discover</h3>
-              <h2>Marbella, the city of mountains, sun and sea</h2>
+              <h3 class="small-uppercase-headline">Discover</h3>
+              <h2 class="larger-headline">
+                Marbella, the city of mountains, sun and sea
+              </h2>
 
               <p>
                 Marbella is a city and resort area on southern Spain’s Costa del
@@ -59,6 +61,97 @@
                 fishing and farming village into an international tourist
                 destination.
               </p>
+            </div>
+          </div>
+        </section>
+        <section class="secondary-section">
+          <h3 class="small-uppercase-headline text-center">Cafés</h3>
+          <h2 class="larger-headline text-center">
+            My favourite cafès in Marbella
+          </h2>
+          <div class="grid-3-columns-even">
+            <div class="card">
+              <img
+                src="src/images/ladybug-small.JPG"
+                alt="Ladybug coffee roasters"
+                class="card-image"
+              />
+              <h4>Ladybug Coffee Roasters</h4>
+              <p>
+                A lovely café and coffee roastery located in the center of
+                Marbella.
+              </p>
+              <h5>Address:</h5>
+              <p>C. Virgen del Pilar, 11, 29602 Marbella, Málaga</p>
+              <h5>What I like about it</h5>
+              <p>
+                This is a café with a very relaxed and friendly atmosphere and
+                excellent coffee that they roast themselves. The prices are very
+                reasonable compared to the quality. They make healthy and tasty
+                food as well!
+              </p>
+              <div class="card-footer">
+                <a
+                  href="https://www.instagram.com/ladybug_roasters_marbella/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="src/images/micasa-small.JPG"
+                alt="Mi Casa Tu Casa"
+                class="card-image"
+              />
+              <h4>Mi Casa Tu Casa</h4>
+              <p>A cosy little café located near Marbella harbour.</p>
+              <h5>Address:</h5>
+              <p>Av. Antonio Belón, 26, Local 12, 29602 Marbella, Málaga</p>
+              <h5>What I like about it</h5>
+              <p>
+                This is a café with a Mexican feel to it. They serve specialty
+                coffee, and a Mexican-inspired breakfast brunch.
+              </p>
+              <div class="card-footer">
+                <a
+                  href="https://www.instagram.com/micasatucasa_marbella/?hl=en"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="src/images/paisana-small.JPG"
+                alt="Paisana"
+                class="card-image img-responsive"
+              />
+              <h4>Paisana</h4>
+              <p>A cafè in Nueva Andalusia with a spectacular view.</p>
+              <h5>Address:</h5>
+              <p>
+                Centro Comercial Centro Plaza, Local 23, 29660 Marbella, Málaga
+              </p>
+              <h5>What I like about it</h5>
+              <p>
+                This cafè has a terrace with a spectacular view overlooking the
+                mountains. They serve food, pastries and of course, all kinds of
+                coffee.
+              </p>
+              <div class="card-footer">
+                <a
+                  href="http://paisanamarbella.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
             </div>
           </div>
         </section>
