--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </section>
         <section class="secondary-section">
-          <h3 class="small-uppercase-headline text-center">Cafés</h3>
+          <h3 class="small-uppercase-headline text-center">Enjoy</h3>
           <h2 class="larger-headline text-center">
             My favourite cafès in Marbella
           </h2>
