Updated card texts and css in cafès section

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
               <h5>What I like about it</h5>
               <p>
                 This is a café with a very relaxed and friendly atmosphere and
-                excellent coffee that they roast themselves. The prices are very
-                reasonable compared to the quality. They make healthy and tasty
-                food as well!
+                excellent coffee that they roast themselves. They serve healthy
+                and tasty food as well!
               </p>
               <div class="card-footer">
                 <a
@@ -112,8 +111,9 @@
               <p>Av. Antonio Belón, 26, Local 12, 29602 Marbella, Málaga</p>
               <h5>What I like about it</h5>
               <p>
-                This is a café with a Mexican feel to it. They serve specialty
-                coffee, and a Mexican-inspired breakfast brunch.
+                This is a café and a Mexican restaurant with a rustic feel to
+                it. They serve specialty coffee, and a Mexican-inspired
+                breakfast brunch.
               </p>
               <div class="card-footer">
                 <a
