--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <img
                 src="/src/images/old-town-street-small.JPG"
                 alt="Street in Marbella Old town"
-                class="img-responsive"
+                class="img-responsive discover"
               />
             </div>
             <div>
@@ -71,24 +71,36 @@
           </h2>
           <div class="grid-3-columns-even">
             <div class="card">
-              <img
-                src="src/images/ladybug-small.JPG"
-                alt="Ladybug coffee roasters"
-                class="card-image"
-              />
-              <h4>Ladybug Coffee Roasters</h4>
-              <p>
-                A lovely café and coffee roastery located in the center of
-                Marbella.
-              </p>
-              <h5>Address:</h5>
-              <p>C. Virgen del Pilar, 11, 29602 Marbella, Málaga</p>
-              <h5>What I like about it</h5>
-              <p>
-                This is a café with a very relaxed and friendly atmosphere and
-                excellent coffee that they roast themselves. They serve healthy
-                and tasty food as well!
-              </p>
+              <div class="card-grid">
+                <img
+                  src="src/images/ladybug-small.JPG"
+                  alt="Ladybug coffee roasters"
+                  class="card-image img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3206.8893342640886!2d-4.892345584432863!3d36.50853339176235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7327f21ce9fd8f%3A0x82ed1b8ea8ca05b1!2sLadybug%20Coffee%20Roasters!5e0!3m2!1sen!2ses!4v1674572051640!5m2!1sen!2ses"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="img-responsive"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Ladybug Coffee Roasters</h4>
+                <p>
+                  A lovely café and coffee roastery located in the center of
+                  Marbella.
+                </p>
+                <h5>Address:</h5>
+                <p>C. Virgen del Pilar, 11, 29602 Marbella, Málaga</p>
+                <h5>What I like about it</h5>
+                <p>
+                  This is a café with a very relaxed and friendly atmosphere and
+                  excellent coffee that they roast themselves. They serve
+                  healthy and tasty food as well!
+                </p>
+              </div>
               <div class="card-footer">
                 <a
                   href="https://www.instagram.com/ladybug_roasters_marbella/"
@@ -100,21 +112,33 @@
               </div>
             </div>
             <div class="card">
-              <img
-                src="src/images/micasa-small.JPG"
-                alt="Mi Casa Tu Casa"
-                class="card-image"
-              />
-              <h4>Mi Casa Tu Casa</h4>
-              <p>A cosy little café located near Marbella harbour.</p>
-              <h5>Address:</h5>
-              <p>Av. Antonio Belón, 26, Local 12, 29602 Marbella, Málaga</p>
-              <h5>What I like about it</h5>
-              <p>
-                This is a café and a Mexican restaurant with a rustic feel to
-                it. They serve specialty coffee, and a Mexican-inspired
-                breakfast brunch.
-              </p>
+              <div class="card-grid">
+                <img
+                  src="src/images/micasa-small.JPG"
+                  alt="Mi Casa Tu Casa"
+                  class="card-image img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12827.683527592653!2d-4.889569!3d36.5077719!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbe67de3a3b5b00be!2sMi%20Casa%20Tu%20Casa!5e0!3m2!1sen!2ses!4v1674571007236!5m2!1sen!2ses"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="img-responsive"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Mi Casa Tu Casa</h4>
+                <p>A cosy little café located near Marbella harbour.</p>
+                <h5>Address:</h5>
+                <p>Av. Antonio Belón, 26, Local 12, 29602 Marbella, Málaga</p>
+                <h5>What I like about it</h5>
+                <p>
+                  This is a café and a Mexican restaurant with a rustic feel to
+                  it. They serve specialty coffee, and a Mexican-inspired
+                  breakfast brunch.
+                </p>
+              </div>
               <div class="card-footer">
                 <a
                   href="https://www.instagram.com/micasatucasa_marbella/?hl=en"
@@ -126,23 +150,36 @@
               </div>
             </div>
             <div class="card">
-              <img
-                src="src/images/paisana-small.JPG"
-                alt="Paisana"
-                class="card-image img-responsive"
-              />
-              <h4>Paisana</h4>
-              <p>A cafè in Nueva Andalusia with a spectacular view.</p>
-              <h5>Address:</h5>
-              <p>
-                Centro Comercial Centro Plaza, Local 23, 29660 Marbella, Málaga
-              </p>
-              <h5>What I like about it</h5>
-              <p>
-                This cafè has a terrace with a spectacular view overlooking the
-                mountains. They serve food, pastries and of course, all kinds of
-                coffee.
-              </p>
+              <div class="card-grid">
+                <img
+                  src="src/images/paisana-small.JPG"
+                  alt="Paisana"
+                  class="card-image img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.5178710424025!2d-4.961759084433154!3d36.49335929261069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7329f2be9a0f93%3A0x977842adcd5bcc65!2sPaisana!5e0!3m2!1sen!2ses!4v1674572207700!5m2!1sen!2ses"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="img-responsive"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Paisana</h4>
+                <p>A cafè in Nueva Andalusia with a spectacular view.</p>
+                <h5>Address:</h5>
+                <p>
+                  Centro Comercial Centro Plaza, Local 23, 29660 Marbella,
+                  Málaga
+                </p>
+                <h5>What I like about it</h5>
+                <p>
+                  This cafè has a terrace with a spectacular view overlooking
+                  the mountains. They serve food, pastries and of course, all
+                  kinds of coffee.
+                </p>
+              </div>
               <div class="card-footer">
                 <a
                   href="http://paisanamarbella.com/"
