Added photo gallery section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,54 @@
             </div>
           </div>
         </section>
+        <section>
+          <h3 class="small-uppercase-headline text-center">View</h3>
+          <h2 class="larger-headline text-center">My photos of Marbella</h2>
+          <div class="grid-3-columns-even">
+            <div>
+              <img
+                src="src/images/mountain-views.jpg"
+                alt="mountain views"
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="src/images/sunset.jpg"
+                alt="mountain views"
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="src/images/old-town-vines.jpg"
+                alt="mountain views"
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="src/images/beachwalk.jpg"
+                alt="mountain views"
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="src/images/puerto-banus-beach.jpg"
+                alt="mountain views"
+                class="img-responsive"
+              />
+            </div>
+            <div>
+              <img
+                src="src/images/roundabout.jpg"
+                alt="mountain views"
+                class="img-responsive"
+              />
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
@@ -228,9 +276,8 @@
           <div>
             <h4>About me</h4>
             <p>
-              Hi! My name is Saana and I've been living in Marbella for 1,5
-              years. I love the city and wanted to share it's highlights with
-              everyone.
+              My name is Saana and I've been living in Marbella for 1,5 years. I
+              love the city and wanted to share it's highlights with everyone.
             </p>
           </div>
           <div>
