Added anchor link "learn more" on index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div>
               <h3 class="small-uppercase-headline">Discover</h3>
-              <h2 class="larger-headline">
+              <h2 class="larger-headline" id="more">
                 Marbella, the city of mountains, sun and sea
               </h2>
 
