Added new sections to index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </h2>
 
               <p>
-                Marbella is a city and resort area on southern Spain’s Costa del
+                Marbella is a city and resort area on southern Spain's Costa del
                 Sol, part of the Andalusia region. The Sierra Blanca Mountains
                 are the backdrop to 27 km of sandy Mediterranean beaches,
                 villas, hotels, and golf courses. West of Marbella town, the
@@ -63,6 +63,36 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="secondary-section">
+          <h3 class="small-uppercase-headline text-center">Learn</h3>
+          <h2 class="larger-headline text-center">Facts about Marbella</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Population</th>
+                <th>Timezone</th>
+                <th>Province</th>
+                <th>Autonomous community</th>
+                <th>Currency</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>150725 (2022)</td>
+                <td>GMT +1</td>
+                <td>Malaga</td>
+                <td>Andalusia</td>
+                <td>Euro</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+        <section>
+          <h3 class="small-uppercase-headline text-center">Experience</h3>
+          <h2 class="larger-headline text-center">
+            My favourite things to do in Marbella
+          </h2>
         </section>
         <section class="secondary-section">
           <h3 class="small-uppercase-headline text-center">Enjoy</h3>
