--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 villas, hotels, and golf courses. West of Marbella town, the
                 Golden Mile of prestigious nightclubs and coastal estates leads
                 to Puerto Banús marina, filled with luxury yachts, and
-                surrounded by upmarket boutiques and bars.
+                surrounded by upmarket boutiques and bars. Marbella boasts its
+                very own micro-climate, which is a local zone where the climate
+                differs to surrounding areas.
               </p>
               <p>
                 Marbella is rich in culture and history that is lesser known to
@@ -73,8 +75,7 @@
                 <th>Population</th>
                 <th>Timezone</th>
                 <th>Province</th>
-                <th>Autonomous community</th>
-                <th>Currency</th>
+                <th>Community</th>
               </tr>
             </thead>
             <tbody>
@@ -83,7 +84,38 @@
                 <td>GMT +1</td>
                 <td>Malaga</td>
                 <td>Andalusia</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th>Currency</th>
+                <th>Language</th>
+                <th>Area</th>
+                <th>Beach</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
                 <td>Euro</td>
+                <td>Spanish</td>
+                <td>114.3 km²</td>
+                <td>27 km</td>
+              </tr>
+            </tbody>
+            <thead>
+              <tr>
+                <th>Avg temp Jan</th>
+                <th>Avg temp Jul</th>
+                <th>Avg rain Jan</th>
+                <th>Avg rain Jul</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>17°C/8°C</td>
+                <td>30°C/20°C</td>
+                <td>5 days</td>
+                <td>0 days</td>
               </tr>
             </tbody>
           </table>
