Added overflow-x:auto to table

--- a/index.html
+++ b/index.html
@@ -69,56 +69,58 @@
         <section class="secondary-section">
           <h3 class="small-uppercase-headline text-center">Learn</h3>
           <h2 class="larger-headline text-center">Facts about Marbella</h2>
-          <table>
-            <thead>
-              <tr>
-                <th>Population</th>
-                <th>Timezone</th>
-                <th>Province</th>
-                <th>Community</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>150725 (2022)</td>
-                <td>GMT +1</td>
-                <td>Malaga</td>
-                <td>Andalusia</td>
-              </tr>
-            </tbody>
-            <thead>
-              <tr>
-                <th>Currency</th>
-                <th>Language</th>
-                <th>Area</th>
-                <th>Beach</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Euro</td>
-                <td>Spanish</td>
-                <td>114.3 km²</td>
-                <td>27 km</td>
-              </tr>
-            </tbody>
-            <thead>
-              <tr>
-                <th>Avg temp Jan</th>
-                <th>Avg temp Jul</th>
-                <th>Avg rain Jan</th>
-                <th>Avg rain Jul</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>17°C/8°C</td>
-                <td>30°C/20°C</td>
-                <td>5 days</td>
-                <td>0 days</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-container">
+            <table>
+              <thead>
+                <tr>
+                  <th>Population</th>
+                  <th>Timezone</th>
+                  <th>Province</th>
+                  <th>Community</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>150725 (2022)</td>
+                  <td>GMT +1</td>
+                  <td>Malaga</td>
+                  <td>Andalusia</td>
+                </tr>
+              </tbody>
+              <thead>
+                <tr>
+                  <th>Currency</th>
+                  <th>Language</th>
+                  <th>Area</th>
+                  <th>Beach</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Euro</td>
+                  <td>Spanish</td>
+                  <td>114.3 km²</td>
+                  <td>27 km</td>
+                </tr>
+              </tbody>
+              <thead>
+                <tr>
+                  <th>Avg temp Jan</th>
+                  <th>Avg temp Jul</th>
+                  <th>Avg rain Jan</th>
+                  <th>Avg rain Jul</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>17°C/8°C</td>
+                  <td>30°C/20°C</td>
+                  <td>5 days</td>
+                  <td>0 days</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </section>
         <section>
           <h3 class="small-uppercase-headline text-center">Experience</h3>
