Added a new section with cards for outdoor acitvities

--- a/index.html
+++ b/index.html
@@ -125,8 +125,106 @@
         <section>
           <h3 class="small-uppercase-headline text-center">Experience</h3>
           <h2 class="larger-headline text-center">
-            My favourite things to do in Marbella
+            My favourite outdoor activities in Marbella
           </h2>
+          <div class="grid-3-columns-even">
+            <div class="card card-secondary">
+              <div class="card-grid">
+                <img
+                  src="src/images/mountain-views.jpg"
+                  alt="Hiking"
+                  class="card-image img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Hiking</h4>
+                <p>
+                  There are many wonderful hiking routes around Marbella to
+                  explore.
+                </p>
+
+                <h5>What I like about it</h5>
+                <p>
+                  Everybody can find a suitable route option for their fitness
+                  level, enjoy the sea air and fantastic scenery. The most
+                  famous hiking destination in the area is the La Concha
+                  mountain, in the natural reserve of Sierra de las Nieves.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.komoot.com/guide/1552477/hiking-around-marbella"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card card-secondary">
+              <div class="card-grid">
+                <img
+                  src="src/images/beachwalk.jpg"
+                  alt="Biking"
+                  class="card-image img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Bike rides</h4>
+                <p>
+                  Feel the wind and smell of fresh sea air. It's the perfect
+                  weather for a bike ride on most days.
+                </p>
+                <h5>What I like about it</h5>
+                <p>
+                  The most fun thing to do is to ride your bike along the
+                  coastal promenad. Of course, there are numerous more
+                  challenging routes available for mountain bikers as well.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.komoot.com/guide/1552480/cycling-around-marbella"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card card-secondary">
+              <div class="card-grid">
+                <img
+                  src="src/images/puerto-banus-beach.jpg"
+                  alt="Paisana"
+                  class="card-image img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Beaches</h4>
+                <p>
+                  There are countless beautiful beaches in Marbella to spend a
+                  relaxed day.
+                </p>
+                <h5>What I like about it</h5>
+                <p>
+                  A picnic on the beach is a popular way of spending a summer
+                  day in Marbella. The beach season is long, as it continues
+                  from April to October. Swimming in the sea and doing some
+                  water sports are also possible.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.tripadvisor.com/Attractions-g187439-Activities-c61-t52-Marbella_Costa_del_Sol_Province_of_Malaga_Andalucia.html"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
         </section>
         <section class="secondary-section">
           <h3 class="small-uppercase-headline text-center">Enjoy</h3>
