Added content to new section with cards

--- a/index.html
+++ b/index.html
@@ -355,6 +355,125 @@
           </div>
         </section>
         <section>
+          <h3 class="small-uppercase-headline text-center">Shop</h3>
+          <h2 class="larger-headline text-center">
+            My favourite ways to spend free time in Marbella
+          </h2>
+          <div class="grid-3-columns-even">
+            <div class="card card-secondary">
+              <div class="card-grid">
+                <img
+                  src="src/images/la-canada.jpg"
+                  alt="La Cañada"
+                  class="card-image img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12825.453582741047!2d-4.8745305!3d36.5212264!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x14c315d3b184eeba!2sLa%20Ca%C3%B1ada%20Shopping%20Center!5e0!3m2!1sen!2ses!4v1674641895643!5m2!1sen!2ses"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="img-responsive"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>La Cañada Shopping</h4>
+                <p>The best and largest shopping mall in Marbella.</p>
+                <h5>Address:</h5>
+                <p>C. Ojén, S/N, 29600 Marbella, Málaga</p>
+                <h5>What I like about it</h5>
+                <p>
+                  There are all kinds of shops, restaurants, cafés and a cinema.
+                  The perfect place to spend an occasional rainy day.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://lacanadashopping.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card card-secondary">
+              <div class="card-grid">
+                <img
+                  src="src/images/red-dog.jpg"
+                  alt="Red Dog"
+                  class="card-image img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12830.755828752664!2d-4.9514622!3d36.489228!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x693331fad62aeada!2sRed%20Dog%20Cinemas!5e0!3m2!1sen!2ses!4v1674642968733!5m2!1sen!2ses"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="img-responsive"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Red Dog Cinemas</h4>
+                <p>A nice movie theater in Puerto Banùs</p>
+                <h5>Address:</h5>
+                <p>Av. de Julio Iglesias, s/n, 29660 Marbella, Málaga</p>
+                <h5>What I like about it</h5>
+                <p>
+                  I love watching movies! This movie theater is the only one in
+                  Marbella that plays movies as their original version with
+                  subtitles.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://reddogcinemas.com/cinemas/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card card-secondary">
+              <div class="card-grid">
+                <img
+                  src="src/images/road.jpg"
+                  alt="road"
+                  class="card-image img-responsive"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1624376.379599388!2d-5.6975851229251!3d37.32806204673317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd11d9b1cf9dc545%3A0xc1c9654d77f1f30f!2sAndalusia!5e0!3m2!1sen!2ses!4v1674643415056!5m2!1sen!2ses"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  class="img-responsive"
+                ></iframe>
+              </div>
+              <div class="card-body">
+                <h4>Road trips</h4>
+                <p>It's always an adventure to see new places.</p>
+                <h5>What I like about it</h5>
+                <p>
+                  A normal weekend feels like a holiday when you can spend it
+                  exploring the Andalusia region. The most famous destinations
+                  include Seville, Malaga, Granada, Cordoba and Gibraltar.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://www.thecrazytourist.com/15-best-day-trips-from-marbella/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link-button"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="secondary-section">
           <h3 class="small-uppercase-headline text-center">View</h3>
           <h2 class="larger-headline text-center">My photos of Marbella</h2>
           <div class="grid-3-columns-even">
