Updated images and alts

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="card card-secondary">
               <div class="card-grid">
                 <img
-                  src="src/images/mountain-views.jpg"
+                  src="src/images/hiking.jpg"
                   alt="Hiking"
                   class="card-image img-responsive"
                 />
@@ -196,7 +196,7 @@
               <div class="card-grid">
                 <img
                   src="src/images/puerto-banus-beach.jpg"
-                  alt="Paisana"
+                  alt="beach"
                   class="card-image img-responsive"
                 />
               </div>
@@ -235,7 +235,7 @@
             <div class="card">
               <div class="card-grid">
                 <img
-                  src="src/images/ladybug-small.JPG"
+                  src="src/images/ladybug.JPG"
                   alt="Ladybug coffee roasters"
                   class="card-image img-responsive"
                 />
@@ -438,7 +438,7 @@
             <div class="card card-secondary">
               <div class="card-grid">
                 <img
-                  src="src/images/road.jpg"
+                  src="src/images/road-trip.jpg"
                   alt="road"
                   class="card-image img-responsive"
                 />
@@ -500,7 +500,7 @@
             </div>
             <div>
               <img
-                src="src/images/beachwalk.jpg"
+                src="src/images/road.jpg"
                 alt="mountain views"
                 class="img-responsive"
               />
