Added filters to images and updated card texts

--- a/index.html
+++ b/index.html
@@ -420,9 +420,8 @@
                 <p>Av. de Julio Iglesias, s/n, 29660 Marbella, Málaga</p>
                 <h5>What I like about it</h5>
                 <p>
-                  I love watching movies! This movie theater is the only one in
-                  Marbella that plays movies as their original version with
-                  subtitles.
+                  I love watching movies! This is the only movie theater in
+                  Marbella that plays movies as their original audio version.
                 </p>
               </div>
               <div class="card-footer">
@@ -458,7 +457,8 @@
                 <p>
                   A normal weekend feels like a holiday when you can spend it
                   exploring the Andalusia region. The most famous destinations
-                  include Seville, Malaga, Granada, Cordoba and Gibraltar.
+                  in the area include Seville, Malaga, Granada, Cordoba and
+                  Gibraltar. You can even catch a boat to Morocco!
                 </p>
               </div>
               <div class="card-footer">
