Added hover state to link buttons on cards + updated text

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
               </div>
               <div class="card-body">
                 <h4>Red Dog Cinemas</h4>
-                <p>A nice movie theater in Puerto Banùs</p>
+                <p>A nice movie theater in Puerto Banùs.</p>
                 <h5>Address:</h5>
                 <p>Av. de Julio Iglesias, s/n, 29660 Marbella, Málaga</p>
                 <h5>What I like about it</h5>
@@ -462,9 +462,9 @@
                 <h5>What I like about it</h5>
                 <p>
                   A normal weekend feels like a holiday when you can spend it
-                  exploring the Andalusia region. The most famous destinations
-                  in the area include Seville, Malaga, Granada, Cordoba and
-                  Gibraltar. You can even catch a boat to Morocco!
+                  exploring Andalusia. Popular destinations in the area include
+                  Seville, Malaga, Granada, Cordoba and Gibraltar. You can even
+                  catch a boat to Morocco!
                 </p>
               </div>
               <div class="card-footer">
