Fixed some typos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <tr>
                   <td>150725 (2022)</td>
                   <td>GMT +1</td>
-                  <td>Malaga</td>
+                  <td>Málaga</td>
                   <td>Andalusia</td>
                 </tr>
               </tbody>
@@ -335,7 +335,7 @@
               </div>
               <div class="card-body">
                 <h4>Paisana</h4>
-                <p>A cafè in Nueva Andalusia with a spectacular view.</p>
+                <p>A café in Nueva Andalusia with a spectacular view.</p>
                 <h5>Address:</h5>
                 <p>
                   Centro Comercial Centro Plaza, Local 23, 29660 Marbella,
@@ -421,7 +421,7 @@
               </div>
               <div class="card-body">
                 <h4>Red Dog Cinemas</h4>
-                <p>A nice movie theater in Puerto Banùs.</p>
+                <p>A nice movie theater in Puerto Banús.</p>
                 <h5>Address:</h5>
                 <p>Av. de Julio Iglesias, s/n, 29660 Marbella, Málaga</p>
                 <h5>What I like about it</h5>
@@ -463,7 +463,7 @@
                 <p>
                   A normal weekend feels like a holiday when you can spend it
                   exploring Andalusia. Popular destinations in the area include
-                  Seville, Malaga, Granada, Cordoba and Gibraltar. You can even
+                  Seville, Málaga, Granada, Cordoba and Gibraltar. You can even
                   catch a boat to Morocco!
                 </p>
               </div>
