Added hover state transformations to h1 and gallery images

--- a/index.html
+++ b/index.html
@@ -487,42 +487,42 @@
               <img
                 src="src/images/mountain-views.jpg"
                 alt="mountain views"
-                class="img-responsive"
+                class="img-responsive gallery"
               />
             </div>
             <div>
               <img
                 src="src/images/sunset.jpg"
                 alt="mountain views"
-                class="img-responsive"
+                class="img-responsive gallery"
               />
             </div>
             <div>
               <img
                 src="src/images/old-town-vines.jpg"
                 alt="mountain views"
-                class="img-responsive"
+                class="img-responsive gallery"
               />
             </div>
             <div>
               <img
                 src="src/images/road.jpg"
                 alt="mountain views"
-                class="img-responsive"
+                class="img-responsive gallery"
               />
             </div>
             <div>
               <img
                 src="src/images/puerto-banus-beach.jpg"
                 alt="mountain views"
-                class="img-responsive"
+                class="img-responsive gallery"
               />
             </div>
             <div>
               <img
                 src="src/images/roundabout.jpg"
                 alt="mountain views"
-                class="img-responsive"
+                class="img-responsive gallery"
               />
             </div>
           </div>
@@ -563,27 +563,28 @@
           <div>
             <h4>About me</h4>
             <p>
-              My name is Saana and I've been living in Marbella for 1,5 years. I
-              love the city and wanted to share it's highlights with everyone.
+              Hola! My name is Saana and I've been living in Marbella for 1,5
+              years. I love the city and wanted to share it's highlights with
+              everyone.
             </p>
           </div>
           <div>
             <h4>About this website</h4>
             <p>
-              This project was coded by
+              This website was coded by
               <a
                 href="https://jovial-strudel-724475.netlify.app/"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Saana Ahonen</a
               >
-              and it is
+              and it is open-sourced on
 
               <a
                 href="https://github.com/sapsu/travel-project-marbella"
                 target="_blank"
                 rel="noopener noreferrer"
-                >open-sourced on GitHub</a
+                >GitHub</a
               >
               .
             </p>
